add new flower shop core

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/FlowerShop/v16
+/FA.FlowerShop/.vs/FA.FlowerShop/v16
+/FA.FlowerShop/FA.FlowerShop.Core/obj/Debug
+/FA.FlowerShop/packages
+/.vs
